# rust-mcp-filesystem-parsers

./: Cargo.toml  Dockerfile  README.md  dist-workspace.toml  plan-dist-manifest.json
.github/workflows/: release.yml
handlers/: parse.rs
src/: handler.rs  macros.rs  main.rs  tools.rs
src/tools/: parse.rs  parse_docx_file.rs  parse_pdf_file.rs
tests/: test_fs_service.rs  test_tools.rs
tests/common/: common.rs
tests/samples/: file-sample.txt
wix/: main.wxs
