[package]
name = "rust-mcp-filesystem-parsers"
version = "0.1.0"
edition = "2021"

[package.metadata.wix]
upgrade-guid = "944FE3C9-C8C2-4114-8C8F-5330720E781F"
path-guid = "0BBAC013-2FD2-42B6-9815-D992FAD3F88E"
license = false
eula = false

[dependencies]
rust-mcp-sdk = {version="0.7", default-features = false, features = [
    "server",
    "macros",
    "stdio",
    "2025_06_18",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Parser dependencies
pdf-extract = "0.10.0"
docx-rs = "0.4.18"
tree_magic_mini = "3.0"

thiserror = { version = "2.0" }
dirs = "6.0"
walkdir = "2.5"
similar = "=2.7"
chrono = "0.4"
clap = { version = "4.5", features = ["derive","env"] }
tokio = "1.4"
async-trait = "0.1"
futures = "0.3"
tokio-util = "0.7"
async_zip = { version = "0.0", features = ["full"] }
grep = "0.4.1"
base64 =  "0.22"
infer = "0.19.0"
rayon = "1.11.0"
sha2 = "0.10.9"
glob-match = "0.2"

[dev-dependencies]
tempfile = "3.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.typos]
default.extend-ignore-re = ["4ded5ca"]
